eksfiles/02-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  labels:
    app: web

spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      serviceAccountName: web-service-account
      containers:
        - name: web
          image: ${IMAGE_URI}
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: web-service
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /

spec:
  type: NodePort
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 5000
